--- a/city/index.html
+++ b/city/index.html
@@ -37,70 +37,70 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-bar-chart fa-fw w3-margin-right w3-text-teal"></i>Student Teaching Feedback</b></p>
-          <a href="GraphTheory-2024.pdf" target="_blank"><p>Graph Theory Lecture 2024 - 2025 Semester 1</p>
+          <a href="GraphTheory-2024.pdf" target="_blank"><p>Graph Theory 2024 - 2025 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:97.78%">My score: 97.78%</div>
-            <div class="w3-container w3-center w3-round-xlarge w3-pale-red" style="width:88.15%">School mean: 88.15%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:88.15%">School mean: 88.15%</div>
           </div></a>
-          <a href="DiscreteMathematics-2024.pdf" target="_blank"><p>Discrete Mathematics Lecture 2023 - 2024 Semester 2</p>
+          <a href="DiscreteMathematics-2024.pdf" target="_blank"><p>Discrete Mathematics 2023 - 2024 Semester 2</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:94%">My score: 94%</div>
-            <div class="w3-container w3-center w3-round-xlarge w3-pale-red" style="width:88.66%">School mean: 88.66%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:88.66%">School mean: 88.66%</div>
           </div></a>
-          <a href="MultivariateCalculus-2023.pdf" target="_blank"><p>Multivariate Calculus Lecture 2023 - 2024 Semester 1</p>
+          <a href="MultivariateCalculus-2023.pdf" target="_blank"><p>Multivariate Calculus 2023 - 2024 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:95.7%">My score: 95.7%</div>
-            <div class="w3-container w3-center w3-round-xlarge w3-pale-red" style="width:88.66%">School mean: 88.66%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:88.66%">School mean: 88.66%</div>
           </div></a>
-          <a href="GraphTheory-2023.pdf" target="_blank"><p>Graph Theory Lecture 2023 - 2024 Semester 1</p>
+          <a href="GraphTheory-2023.pdf" target="_blank"><p>Graph Theory 2023 - 2024 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:95.14%">My score: 95.14%</div>
-            <div class="w3-container w3-center w3-round-xlarge w3-pale-red" style="width:88.66%">School mean: 88.66%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:88.66%">School mean: 88.66%</div>
           </div></a>
-          <a href="DiscreteMathematics-2023.pdf" target="_blank"><p>Discrete Mathematics Lecture 2022 - 2023 Semester 2</p>
+          <a href="DiscreteMathematics-2023.pdf" target="_blank"><p>Discrete Mathematics 2022 - 2023 Semester 2</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:94.2%">My score: 94.2%</div>
-            <div class="w3-container w3-center w3-round-xlarge w3-pale-red" style="width:89.16%">School mean: 89.16%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:89.16%">School mean: 89.16%</div>
           </div></a>
-          <a href="MultivariateCalculus-2022.pdf" target="_blank"><p>Multivariate Calculus Lecture 2022 - 2023 Semester 1</p>
+          <a href="MultivariateCalculus-2022.pdf" target="_blank"><p>Multivariate Calculus 2022 - 2023 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:94.6%">My score: 94.6%</div>
-            <div class="w3-container w3-center w3-round-xlarge w3-pale-red" style="width:89.16%">School mean: 89.16%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:89.16%">School mean: 89.16%</div>
           </div></a>
-          <a href="GraphTheory-2022.pdf" target="_blank"><p>Graph Theory Lecture 2022 - 2023 Semester 1</p>
+          <a href="GraphTheory-2022.pdf" target="_blank"><p>Graph Theory 2022 - 2023 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:95.5%">My score: 95.5%</div>
-            <div class="w3-container w3-center w3-round-xlarge w3-pale-red" style="width:89.16%">School mean: 89.16%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:89.16%">School mean: 89.16%</div>
           </div></a>
-          <a href="DiscreteMathematics-2022.pdf" target="_blank"><p>Discrete Mathematics Lecture 2021 - 2022 Semester 2</p>
+          <a href="DiscreteMathematics-2022.pdf" target="_blank"><p>Discrete Mathematics 2021 - 2022 Semester 2</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:94.76%">My score: 94.76%</div>
-            <div class="w3-container w3-center w3-round-xlarge w3-pale-red" style="width:89.57%">School mean: 89.57%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:89.57%">School mean: 89.57%</div>
           </div></a>
-          <a href="MultivariateCalculus-2021.pdf" target="_blank"><p>Multivariate Calculus Lecture 2021 - 2022 Semester 1</p>
+          <a href="MultivariateCalculus-2021.pdf" target="_blank"><p>Multivariate Calculus 2021 - 2022 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:96.02%">My score: 96.02%</div>
-            <div class="w3-container w3-center w3-round-xlarge w3-pale-red" style="width:89.57%">School mean: 89.57%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:89.57%">School mean: 89.57%</div>
           </div></a>
-          <a href="GraphTheory-2021.pdf" target="_blank"><p>Graph Theory Lecture 2021 - 2022 Semester 1</p>
+          <a href="GraphTheory-2021.pdf" target="_blank"><p>Graph Theory 2021 - 2022 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:99.4%">99.4%</div>
-            <div class="w3-container w3-center w3-round-xlarge w3-pale-red" style="width:89.57%">School mean: 89.57%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:89.57%">School mean: 89.57%</div>
           </div></a>
-          <a href="DiscreteMathematics-2021.pdf" target="_blank"><p>Discrete Mathematics Lecture 2020 - 2021 Semester 2</p>
+          <a href="DiscreteMathematics-2021.pdf" target="_blank"><p>Discrete Mathematics 2020 - 2021 Semester 2</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:97.4%">97.4%</div>
-            <div class="w3-container w3-center w3-round-xlarge w3-pale-red" style="width:89.28%">School mean: 89.28%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:89.28%">School mean: 89.28%</div>
           </div></a>
-          <a href="MultivariateCalculus-2020.pdf" target="_blank"><p>Multivariate Calculus Lecture 2020 - 2021 Semester 1</p>
+          <a href="MultivariateCalculus-2020.pdf" target="_blank"><p>Multivariate Calculus 2020 - 2021 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:97%">97%</div>
-            <div class="w3-container w3-center w3-round-xlarge w3-pale-red" style="width:89.28%">School mean: 89.28%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:89.28%">School mean: 89.28%</div>
           </div></a>
-          <a href="GraphTheory-2020.pdf" target="_blank"><p>Graph Theory Lecture 2020 - 2021 Semester 1</p>
+          <a href="GraphTheory-2020.pdf" target="_blank"><p>Graph Theory 2020 - 2021 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:95.4%">95.4%</div>
-            <div class="w3-container w3-center w3-round-xlarge w3-pale-red" style="width:89.28%">School mean: 89.28%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:89.28%">School mean: 89.28%</div>
           </div></a>
           <br>
 
