--- a/city/index.html
+++ b/city/index.html
@@ -84,22 +84,22 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div></a>
           <a href="GraphTheory-2021.pdf" target="_blank"><p>Graph Theory 2021 - 2022 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:99.4%">99.4%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:99.4%">My score: 99.4%</div>
             <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:89.57%">School mean: 89.57%</div>
           </div></a>
           <a href="DiscreteMathematics-2021.pdf" target="_blank"><p>Discrete Mathematics 2020 - 2021 Semester 2</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:97.4%">97.4%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:97.4%">My score: 97.4%</div>
             <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:89.28%">School mean: 89.28%</div>
           </div></a>
           <a href="MultivariateCalculus-2020.pdf" target="_blank"><p>Multivariate Calculus 2020 - 2021 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:97%">97%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:97%">My score: 97%</div>
             <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:89.28%">School mean: 89.28%</div>
           </div></a>
           <a href="GraphTheory-2020.pdf" target="_blank"><p>Graph Theory 2020 - 2021 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:95.4%">95.4%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:95.4%">My score: 95.4%</div>
             <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:89.28%">School mean: 89.28%</div>
           </div></a>
           <br>
