--- a/city/index.html
+++ b/city/index.html
@@ -145,7 +145,7 @@ a:hover {text-decoration: none;}
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Senior Lecturer / Nanyang Technological University, Singapore</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Spetember 2020 - March 2024</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2020 - March 2024</h6>
           <hr>
         </div>
         <div class="w3-container">
