--- a/city/index.html
+++ b/city/index.html
@@ -114,17 +114,19 @@ a:hover {text-decoration: none;}
     <div class="w3-twothird">
 
             <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Supplementary teaching resources</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-wrench fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Supplementary teaching resources</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><a href="http://graph-theory-visualizer.s3-website-ap-southeast-1.amazonaws.com/" target="_blank"><b>Graph editor and interactive notes for MH3300 Graph Theory</b></a></h5>
-          <span>Developed with my student Neysan Foo.</span>
+          <span>This webpage is currently under development, due to be rolled out in the coming semester.  It is centered around an interactive graph editor.
+          In addition to the course notes, it contains interactive exercises, which can be automatically checked.  It can also step through algorithms in real time for a selection of different examples.</span>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Interactive Geogebra demonstrations for MH2100 Calculus III</b></h5>
+          <span>For the sake of maximising accessibility, I utilise and develop web applications for teaching.  Below are two examples built using Geogebra.</span>
           <ul>
-            <li><a href="https://www.geogebra.org/m/f8crxk4z" target="_blank">Example I</a></li>
-            <li><a href="https://www.geogebra.org/m/q4ya8tnq" target="_blank">Example II</a></li>
+            <li><a href="https://www.geogebra.org/m/f8crxk4z" target="_blank">Directional derivative demonstration</a></li>
+            <li><a href="https://www.geogebra.org/m/q4ya8tnq" target="_blank">Lagrange multipliers demonstration</a></li>
           </ul>
           <hr>
         </div>
