--- a/city/index.html
+++ b/city/index.html
@@ -131,6 +131,45 @@ a:hover {text-decoration: none;}
           <hr>
         </div>
       </div>
+
+       <div class="w3-container w3-card w3-white w3-margin-bottom">
+        <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-medal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Teaching awards</h2>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Nanyang Education Award (College)</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2024</span></h6>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>SPMS Teaching Excellence Award</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2024</span></h6>
+          <hr>
+        </div>
+         <div class="w3-container">
+          <h5 class="w3-opacity"><b>SPMS Teaching Excellence Award</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2023</span></h6>
+          <hr>
+        </div>
+         <div class="w3-container">
+          <h5 class="w3-opacity"><b>SPMS Teaching Excellence Award</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2022</span></h6>
+          <hr>
+        </div>
+         <div class="w3-container">
+          <h5 class="w3-opacity"><b>John Cheung Social Media Award</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2021</span></h6>
+          <hr>
+        </div>
+         <div class="w3-container">
+          <h5 class="w3-opacity"><b>Nanyang Education Award (School)</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2020</span></h6>
+          <hr>
+        </div>
+         <div class="w3-container">
+          <h5 class="w3-opacity"><b>SPMS Teaching Excellence Award</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2019</span></h6>
+          <hr>
+        </div>
+      </div>
     
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
