--- a/city/index.html
+++ b/city/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 a:hover {text-decoration: none;}
@@ -135,38 +136,31 @@ a:hover {text-decoration: none;}
        <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-medal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Teaching awards</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Nanyang Education Award (College)</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2024</span></h6>
+          <h5 class="w3-opacity"><b>2024 Nanyang Education Award (College)</b></h5>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>SPMS Teaching Excellence Award</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2024</span></h6>
+          <h5 class="w3-opacity"><b>2024 SPMS Teaching Excellence Award</b></h5>
           <hr>
         </div>
          <div class="w3-container">
-          <h5 class="w3-opacity"><b>SPMS Teaching Excellence Award</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2023</span></h6>
+          <h5 class="w3-opacity"><b>2023 SPMS Teaching Excellence Award</b></h5>
           <hr>
         </div>
          <div class="w3-container">
-          <h5 class="w3-opacity"><b>SPMS Teaching Excellence Award</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2022</span></h6>
+          <h5 class="w3-opacity"><b>2022 SPMS Teaching Excellence Award</b></h5>
           <hr>
         </div>
          <div class="w3-container">
-          <h5 class="w3-opacity"><b>John Cheung Social Media Award</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2021</span></h6>
+          <h5 class="w3-opacity"><b>2021 John Cheung Social Media Award</b></h5>
           <hr>
         </div>
          <div class="w3-container">
-          <h5 class="w3-opacity"><b>Nanyang Education Award (School)</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2020</span></h6>
+          <h5 class="w3-opacity"><b>2020 Nanyang Education Award (School)</b></h5>
           <hr>
         </div>
          <div class="w3-container">
-          <h5 class="w3-opacity"><b>SPMS Teaching Excellence Award</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2019</span></h6>
+          <h5 class="w3-opacity"><b>2019 SPMS Teaching Excellence Award</b></h5>
           <hr>
         </div>
       </div>
