--- a/city/index.html
+++ b/city/index.html
@@ -7,7 +7,6 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 a:hover {text-decoration: none;}
@@ -134,7 +133,7 @@ a:hover {text-decoration: none;}
       </div>
 
        <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-medal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Teaching awards</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa-solid fa-medal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Teaching awards</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>2024 Nanyang Education Award (College)</b></h5>
           <hr>
