--- a/city/index.html
+++ b/city/index.html
@@ -11,6 +11,7 @@
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 a:hover {text-decoration: none;}
 </style>
+  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
 <body class="w3-light-grey">
 
@@ -133,7 +134,7 @@ a:hover {text-decoration: none;}
       </div>
 
        <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa-solid fa-medal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Teaching awards</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-medal w3-text-teal fa-fw w3-margin-right" style='font-size:48px;color:teal'></i>Teaching awards</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>2024 Nanyang Education Award (College)</b></h5>
           <hr>
