--- a/city/index.html
+++ b/city/index.html
@@ -115,10 +115,10 @@ a:hover {text-decoration: none;}
     <div class="w3-twothird">
 
             <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-wrench fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Supplementary teaching resources</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-wrench fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Supplementary Teaching Resources</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><a href="http://graph-theory-visualizer.s3-website-ap-southeast-1.amazonaws.com/" target="_blank"><b>Graph editor and interactive notes for MH3300 Graph Theory</b></a></h5>
-          <span>This webpage is currently under development, due to be rolled out in the coming semester.  It is centered around an interactive graph editor.
+          <span>This webpage is currently under development, due to be rolled out in the coming semester.  It is centred around an interactive graph editor.
           In addition to the course notes, it contains interactive exercises, which can be automatically checked.  It can also step through algorithms in real time for a selection of different examples.</span>
           <hr>
         </div>
@@ -134,7 +134,7 @@ a:hover {text-decoration: none;}
       </div>
 
        <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-medal w3-text-teal fa-fw w3-margin-right" style='font-size:48px;color:teal'></i>Teaching awards</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-medal w3-text-teal fa-fw w3-margin-right" style='font-size:48px;color:teal'></i>Teaching Awards</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>2024 Nanyang Education Award (College)</b></h5>
           <hr>
