--- a/city/index.html
+++ b/city/index.html
@@ -134,7 +134,7 @@ a:hover {text-decoration: none;}
       </div>
 
        <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-medal w3-text-teal fa-fw w3-margin-right" style='font-size:48px;color:teal'></i>Teaching Awards</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-award fa-fw w3-margin-right" style='font-size:48px;color:teal'></i>Teaching Awards</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>2024 Nanyang Education Award (College)</b></h5>
           <hr>
