--- a/index.html
+++ b/index.html
@@ -73,10 +73,9 @@
 <h3>News</h3>
 		<div class="pres">
 			<img style="float: right; width: 60%" alt="" src="images/mh3300.png">
-			<strong>Graph Theory Interactive Notes</strong> <br/>
-			<div class="name">Supplementary webpage for MH3300</div>
+			<div class="name">Graph Theory Interactive Notes</div>
 			<div class="when">Live since: 24 June 2025 </div>
-			<div class="where">See <a href="https://graphtheory.pages.dev/" target="_blank">Wei-Hsuan Yu's conjecture</a>.  
+			<div class="where"><a href="https://graphtheory.pages.dev/" target="_blank">Supplementary webpage for MH3300</a>.  
 			</div>
 			<div class="clear"></div>
 		</div>	
