--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
 
 <h3>News</h3>
 		<div class="pres">
-			<img style="float: right; width: 60%" alt="" src="images/mh3300.png">
-			<div class="name">Graph Theory Interactive Notes</div>
+			<img style="float: left; width: 60%; padding-right: 2em" alt="" src="images/mh3300.png">
+			<strong>Online Interactive Notes</strong> <br/>
+			<div class="name">MH3300 Graph Theory</div>
 			<div class="when">Live since: 24 June 2025 </div>
 			<div class="where"><a href="https://graphtheory.pages.dev/" target="_blank">Supplementary webpage for MH3300</a>.  
 			</div>
@@ -89,7 +90,7 @@
 			<div class="clear"></div>
 		</div>					
 		<div class="pres">
-			<img style="float: left; width: 15%; padding-right: 2em"" alt="" src="posters/nea.jpg">
+			<img style="float: left; width: 15%; padding-right: 2em" alt="" src="posters/nea.jpg">
 			<strong>Award Recipient</strong> <br/>
 			<div class="name"> Nanyang Education Award (College)</div>
 			<div class="when">Awarded: 6 November 2024</div>
