--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<strong>Online Interactive Notes</strong> <br/>
 			<div class="name">MH3300 Graph Theory</div>
 			<div class="when">Live since: 24 June 2025 </div>
-			<div class="where"><a href="https://graphtheory.pages.dev/" target="_blank">Supplementary webpage for MH3300</a>.  
+			<div class="where"><a href="https://graphtheory.pages.dev/" target="_blank">Supplementary webpage for MH3300 Graph Theory</a>.  
 			</div>
 			<div class="clear"></div>
 		</div>	
