--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
 
 <h3>News</h3>
 		<div class="pres">
+			<img style="float: right; width: 60%" alt="" src="images/heyMag.png">
+			<strong>Magazine feature</strong> <br/>
+			<div class="name">Hey! Magazine Volume 62</div>
+			<div class="when">Published: 21 July 2025 </div>
+			<div class="where">Read the online version of <a href="https://ebook.ntu.edu.sg/hey-issue-62.html" target="_blank">here</a>.</div>
+			<div class="clear"></div>
+		</div>	
+		<div class="pres">
 			<img style="float: left; width: 60%; padding-right: 2em" alt="" src="images/mh3300.png">
 			<strong>Online Interactive Notes</strong> <br/>
 			<div class="name">MH3300 Graph Theory</div>
