--- a/index.html
+++ b/index.html
@@ -206,7 +206,15 @@
 			<script src="jquery.sticky.js"></script>
 			<script>
 			var papers =
-			[["Neumaier graphs from cyclotomy with small coherent rank",
+			[["A note on some spectral properties of generalised pancake graphs",
+				"Zhu",
+				"We prove that the spectral gap of generalised pancake graphs is strictly less than 2 and strictly less than 1 for burnt pancake graphs. In addition, we establish lower bounds on the multiplicities of certain integer eigenvalues of generalised pancake graphs. Together, these results settle two recent conjectures of Blanco and Buehrle.",
+				"https://arxiv.org/abs/2509.09425",
+				null,
+				[],
+				null,
+			null],
+				["Neumaier graphs from cyclotomy with small coherent rank",
 				"Tan",
 				"Using cyclotomy, we construct a new infinite family of Neumaier graphs that includes infinitely many strongly regular graphs. Notably, this family conjecturally contains infinitely many graphs with coherent rank 6. Our construction also provides the first known examples that answer a question posed by Evans, Goryainov, and Panasenko regarding the existence of Neumaier graphs whose nexus is not a power of 2. In addition, we show that a construction of Greaves and Koolen yields an infinite family of Neumaier graphs with coherent rank 6.",
 				"https://arxiv.org/abs/2504.12026",
