--- a/index.html
+++ b/index.html
@@ -206,7 +206,15 @@
 			<script src="jquery.sticky.js"></script>
 			<script>
 			var papers =
-			[["A note on some spectral properties of generalised pancake graphs",
+			[["Characteristic polynomials of $\\{\\pm 1\\}$-matrices modulo a power of 2",
+				"Phan",
+			  "For a fixed integer $e\\geqslant 3$ and $n$ large enough, we show that the number of congruence classes modulo $2^e$ of characteristic polynomials of $n\\times n$ symmetric $\\{\\pm 1\\}$-matrices with constant diagonal is equal to $2^{{e -2} \choose 2}$ if $n$ is even or $2^{{e -2} \choose 2 + 1}$ if $n$ is odd, thereby solving a conjecture of Greaves and Yatsyna from 2019. We also show that, for n large enough, the number of congruence classes modulo $2^e$ of characteristic polynomials of $n\\times n$ skew-symmetric $\\{\\pm 1\\}$-matrices with constant diagonal is equal to $2^{\lfloor \frac{e-1}{2} \rfloor\lfloor \frac{e-2}{2} \rfloor}$ if $n$ is even or $2^{\lfloor \frac{e-2}{2} \rfloor\lfloor \frac{e-3}{2} \rfloor}$ if $n$ is odd. We introduce the concept of a lift graph/tournament, which serves as our main tool. We also introduce the notion of the walk polynomial of a graph, which enables us to show the existence of the requisite lift tournaments.",
+				"https://arxiv.org/abs/2511.08333",
+				null,
+				[],
+				null,
+			null],
+			 ["A note on some spectral properties of generalised pancake graphs",
 				"Zhu",
 				"We prove that the spectral gap of generalised pancake graphs is strictly less than 2 and strictly less than 1 for burnt pancake graphs. In addition, we establish lower bounds on the multiplicities of certain integer eigenvalues of generalised pancake graphs. Together, these results settle two recent conjectures of Blanco and Buehrle.",
 				"https://arxiv.org/abs/2509.09425",
