Round lengths in message output for better clarity

--- a/seeNTU/triangle.html
+++ b/seeNTU/triangle.html
@@ -185,7 +185,7 @@
           var sum = redLength + blueLength + yellowLength;
 
           // update message
-          msg.innerHTML = 'R: ' + redLength + ';<br> B: ' + blueLength + ';<br> Y: ' + yellowLength + ';<br> R + B + Y= ' + sum;
+          msg.innerHTML = 'R = ' + Math.round(redLength) + ';<br> B = ' + Math.round(blueLength) + ';<br> Y = ' + Math.round(yellowLength) + ';<br> R + B + Y = ' + Math.round(sum);
       }
         });
     </script>
