Update message format to include units in triangle.html

--- a/seeNTU/triangle.html
+++ b/seeNTU/triangle.html
@@ -185,7 +185,7 @@
           var sum = redLength + blueLength + yellowLength;
 
           // update message
-          msg.innerHTML = 'R = ' + Math.round(redLength) + ';<br> B = ' + Math.round(blueLength) + ';<br> Y = ' + Math.round(yellowLength) + ';<br> R + B + Y = ' + Math.round(sum);
+          msg.innerHTML = 'R = ' + Math.round(redLength) + ' cm;<br> B = ' + Math.round(blueLength) + ' cm;<br> Y = ' + Math.round(yellowLength) + ' cm;<br> R + B + Y = ' + Math.round(sum) + ' cm.';
       }
         });
     </script>
