--- a/seeNTU/triangle.html
+++ b/seeNTU/triangle.html
@@ -183,9 +183,13 @@
           line3.setAttribute('y2', bisector3.yIntercept);
           var yellowLength = Math.sqrt((x-bisector3.xIntercept)**2 + (y-bisector3.yIntercept)**2);
           var sum = redLength + blueLength + yellowLength;
+            var rs = Math.round(sum);
+            var rl = Math.round(redLength);
+            var bl = Math.round(blueLength);
+            var yl = rs-rl-bl;
 
           // update message
-          msg.innerHTML = '<span style="color:red;">R = ' + Math.round(redLength) + ' cm;</span><br> <span style="color:blue;">B = ' + Math.round(blueLength) + ' cm;</span><br> <span style="background-color: yellow;">Y = ' + sum -Math.round(blueLength)-Math.round(redLength)  + ' cm;</span><br> <span style="color:red;">R</span> + <span style="color:blue;">B</span> + <span style="background-color: yellow;">Y</span> = ' + Math.round(sum) + ' cm.';
+          msg.innerHTML = '<span style="color:red;">R = ' + rl + ' cm;</span><br> <span style="color:blue;">B = ' + bl + ' cm;</span><br> <span style="background-color: yellow;">Y = ' + yl  + ' cm;</span><br> <span style="color:red;">R</span> + <span style="color:blue;">B</span> + <span style="background-color: yellow;">Y</span> = ' + rs + ' cm.';
       }
         });
     </script>
