--- a/seeNTU/sperner.html
+++ b/seeNTU/sperner.html
@@ -110,6 +110,7 @@ a:hover{color:#333;text-decoration:none;}
   </head>
   <body>
       <div id="container">
+        <h1>Sperner triangle</h1>
 <h3 class="title">Select Colour:</h3>
 <div id="palette">
   <a href="#" id="red" class="on">Red</a>
