Update Non-Sperner Triangle link to new URL

--- a/NTUopenhouse.html
+++ b/NTUopenhouse.html
@@ -32,6 +32,6 @@
     <img src="./ntu-crest.png" alt="NTU Logo">
     <a href="https://grwgrvs.github.io/seeNTU/triangle.html" target="_blank">Equilateral Triangle</a>
     <a href="https://grwgrvs.github.io/seeNTU/sperner.html" target="_blank">Sperner Triangle</a>
-    <a href="https://grwgrvs.github.io/seeNTU/sperner.html" target="_blank">Non-Sperner Triangle</a>
+    <a href="https://grwgrvs.github.io/seeNTU/colourTriangle.html" target="_blank">Non-Sperner Triangle</a>
 </body>
 </html>
