--- a/seeNTU/colourTriangle.html
+++ b/seeNTU/colourTriangle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sperner Triangle</title>
+    <title>Non-Sperner Triangle</title>
     <style>
 
         svg {
@@ -110,7 +110,7 @@ a:hover{color:#333;text-decoration:none;}
   </head>
   <body>
       <div id="container">
-        <h1>General triangle</h1>
+        <h1>Non-Sperner triangle</h1>
 <h3 class="title">Select Colour:</h3>
 <div id="palette">
   <a href="#" id="red" class="on">Red</a>
