Fix variable names in message update for triangle

--- a/seeNTU/triangle.html
+++ b/seeNTU/triangle.html
@@ -189,7 +189,7 @@
             var yl = rs-rl-bl;
 
           // update message
-          msg.innerHTML = '<span style="color:red;">R = ' + rl + ' cm;</span><br> <span style="color:blue;">B = ' + bl + ' cm;</span><br> <span style="background-color: yellow;">Y = ' + yl  + ' cm;</span><br> <span style="color:red;">R</span> + <span style="color:blue;">B</span> + <span style="background-color: yellow;">Y</span> = ' + rs + ' cm.';
+          msg.innerHTML = '<span style="color:red;">R = ' + redLength + ' cm;</span><br> <span style="color:blue;">B = ' + blueLength + ' cm;</span><br> <span style="background-color: yellow;">Y = ' + yellowLength  + ' cm;</span><br> <span style="color:red;">R</span> + <span style="color:blue;">B</span> + <span style="background-color: yellow;">Y</span> = ' + rs + ' cm.';
       }
         });
     </script>
